` PlantUML <plantuml.com> State Diagram.
` Generated from src/main/java/io/temporal/internal/statemachines/CompleteWorkflowStateMachine.java
` by io.temporal.internal.statemachines.CommandsGeneratePlantUMLStateDiagramsTest.


@startuml
title CompleteWorkflow State Transitions

[*] --> CREATED
COMPLETE_WORKFLOW_COMMAND_CREATED --> COMPLETE_WORKFLOW_COMMAND_CREATED: COMPLETE_WORKFLOW_EXECUTION
COMPLETE_WORKFLOW_COMMAND_CREATED --> COMPLETE_WORKFLOW_COMMAND_RECORDED: WORKFLOW_EXECUTION_COMPLETED
CREATED --> COMPLETE_WORKFLOW_COMMAND_CREATED: SCHEDULE
COMPLETE_WORKFLOW_COMMAND_RECORDED --> [*]
center footer Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
@enduml
